<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">立寻</string>

    <string name="clear_cache_menu">Clear Caches</string>
    <string name="clear_cache_complete_toast">Caches have been cleared</string>
    <string name="imageview_description">Image Thumbnail</string>
    <string name="no_network_connection_toast">当前无网络连接</string>

    <!-- 页面名称 -->
    <string name="main_navigation_home">立寻</string>
    <string name="main_navigation_im">发现</string>
    <string name="main_navigation_interest">消息</string>
    <string name="main_navigation_user">我的</string>

    <!--置顶/最新-->
    <string name="main_lx_top_btn">置顶</string>
    <string name="main_lx_new_btn">最新</string>
    <string name="main_lx_xs_btn">悬赏</string>


    <!--AAAAAA-->
    <string name="market_info_title">0</string>

    <string name="progress_loading">加载中，请稍候</string>
    <string name="progress_load_error">加载失败，点击屏幕刷新</string>
    <string name="progress_load_no_data">暂无数据</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在刷新</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开加载更多</string>
    <string name="xlistview_footer_hint_loading">正在加载更多...</string>
    <string name="xlistview_footer_hint_complete">已加载完全部</string>

    <!-- 手势密码 -->
    <string name="string_security_setting">安全设置</string>
    <string name="string_gesture_password">手势密码</string>
    <string name="string_modify_gesture_password">修改手势密码</string>
    <string name="string_set_gesture_password">设置手势密码</string>
    <string name="string_guide_info">您可以创建一个</string>
    <string name="string_guide_info_right">手势密码图案</string>
    <string name="string_guide_info_last">使用手势密码进行登录，安全、便捷</string>

    <string name="retry_gesture">重新绘制解锁图案</string>
    <string name="draw_gesture">绘制解锁图案</string>
    <string name="draw_gesture_again">再次输入手势密码</string>
    <string name="draw_gesture_not_same">与上次绘制不一致，请重新绘制</string>
    <string name="gesture_login_five_failed">登录错误过多，账号被注销</string>
    <string name="draw_gesture_need_six_dot">至少连接六个点，请重新绘制</string>
    <string name="draw_gesture_left_chances">输入手势密码错误，还有%s次机会</string>
    <string name="forget_gesture_need_login">忘记手势密码，需重新登录</string>
    <string name="draw_gesture_error_clear_login">输入手势密码错误5次，登录状态已清除</string>
    <string name="set_complete">设置成功</string>
    <string name="forget_gesture">忘记手势密码</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--登录/注册/忘记密码-->
    <string name="qsr6wszyzm">请输入6位数字验证码</string>
    <string name="fsyzm">发送验证码</string>
    <string name="sjgsbzq">手机格式不正确</string>
    <string name="sjhm">手机号码</string>
    <string name="lxlogin">登录</string>
    <string name="lxregister">注册</string>
    <string name="lxforgetpass">忘记密码?</string>
    <string name="ksdj">快速登录</string>
    <string name="qsrmm">请输入密码</string>
    <string name="sznc">设置昵称</string>
    <string name="szdlmm">设置登录密码</string>
    <string name="registersm">*注册即表示你同意</string>
    <string name="usedxy">《立寻网用户使用协议》</string>
    <string name="setnewpass">设置新密码</string>


    <!--Baidu-->
    <string name="startlocation">开始定位</string>
    <string name="stoplocation">停止定位</string>
    <string name="error_code_desc">错误码说明</string>
    <string name="diy_call_back">自定义回调</string>
    <string name="diy_call_back_ps">ps:网络定位由于精度低于gps，计算距离会有部分偏差</string>
    <string name="qa_title">常见问题</string>
    <string name="hight_accuracy_desc">高精度定位模式下，会同时使用GPS、Wifi和基站定位，返回的是当前条件下精度最好的定位结果</string>
    <string name="saving_battery_desc">低功耗定位模式下，仅使用网络定位即Wifi和基站定位，返回的是当前条件下精度最好的网络定位结果</string>
    <string name="device_sensor_desc">仅用设备定位模式下，只使用用户的GPS进行定位。这个模式下，由于GPS芯片锁定需要时间，首次定位速度会需要一定的时间</string>
    <string name="error_code_detail"> 61 ： GPS定位结果\n
		62 ： 扫描整合定位依据失败。此时定位结果无效。\n
		63 ： 网络异常，没有成功向服务器发起请求。此时定位结果无效。\n
		65 ： 定位缓存的结果。\n
		66 ： 离线定位结果。通过requestOfflineLocaiton调用时对应的返回结果\n
		67 ： 离线定位失败。通过requestOfflineLocaiton调用时对应的返回结果\n
		68 ： 网络连接失败时，查找本地离线定位时对应的返回结果\n
		161： 表示网络定位结果\n
		162~167： 服务端定位失败\n
		502：key参数错误\n
		505：key不存在或者非法\n
		601：key服务被开发者自己禁用\n
		602：key mcode不匹配\n
		501～700：key验证失败\n</string>
    <string name="qa_callback">问题反馈:\n
        邮件格式格式：\n
		1) 手机标识（移动联通IMEI，电信MEID）\n
		2) 问题发生时间；\n
		3）定位类型：失败（给出返回码），或者不准（给出真实位置）等；\n
		4）具体描述：细节描述，可以给出问题发生的频率或者APP名称，sdk版本等，也可以加上附件如日志，贴图等\n
        </string>
    <string name="qa_callback_mail">反馈邮箱:loc-bugs@baidu.com</string>

</resources>