<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">
    <!--标题栏-->
    <include layout="@layout/layout_main_header" />
    <!--手机号码-->
    <RelativeLayout
        android:id="@+id/rl_1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18.0dip"
        android:layout_marginRight="18.0dip"
        android:layout_marginTop="45.0dip">

        <RelativeLayout
            android:id="@+id/layoutPhone"
            android:layout_width="fill_parent"
            android:layout_height="45.0dip"
            android:background="@drawable/editsharp_white">

            <ImageView
                android:id="@+id/imgPhone"
                android:layout_width="15.0dip"
                android:layout_height="18.0dip"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20.0dip"
                android:background="@drawable/phone" />

            <EditText
                android:id="@+id/phone"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_toRightOf="@+id/imgPhone"
                android:background="@null"
                android:hint="@string/sjhm"
                android:inputType="number"
                android:maxLength="11"
                android:paddingLeft="15.0dip"
                android:singleLine="true"
                android:textColor="#ff111111"
                android:textColorHint="#ffaaaaaa"
                android:textSize="15dp" />

            <ImageView
                android:id="@+id/imgCancel"
                android:layout_width="16.0dip"
                android:layout_height="16.0dip"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="12.0dip"
                android:background="@drawable/cancel_phone"
                android:visibility="gone" />
        </RelativeLayout>

        <!--判断手机格式-->
        <TextView
            android:id="@+id/phone_regx"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layoutPhone"
            android:layout_marginLeft="@dimen/space_20"
            android:layout_marginTop="10dp"
            android:textSize="@dimen/space_12"
            android:textColor="@color/xs_red"
            android:text="@string/sjgsbzq"/>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="45.0dip"
            android:layout_below="@+id/layoutPhone"
            android:layout_marginTop="30dp"
            android:background="@drawable/editsharp_white">


            <ImageView
                android:id="@+id/imgCode"
                android:layout_width="15.0dip"
                android:layout_height="18.0dip"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20.0dip"
                android:background="@drawable/pwd" />

            <EditText
                android:id="@+id/password"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_toRightOf="@+id/imgCode"
                android:background="@null"
                android:hint="@string/qsrmm"
                android:inputType="number"
                android:maxLength="6"
                android:paddingLeft="15.0dip"
                android:singleLine="true"
                android:textColor="#ff111111"
                android:textColorHint="#ffaaaaaa"
                android:textSize="15dp" />


        </RelativeLayout>
    </RelativeLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="fill_parent"
        android:layout_height="40.0dip"
        android:layout_below="@+id/rl_1"
        android:layout_marginLeft="18.0dip"
        android:layout_marginRight="18.0dip"
        android:layout_marginTop="30.0dip"
        android:background="@drawable/btn_red"
        android:text="@string/lxlogin"
        android:textColor="#ffffffff"
        android:textSize="18.0sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/space_20"
        android:gravity="right"
        >
        <TextView
            android:id="@+id/lx_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:textColor="@color/xs_short_gary2"
            android:textSize="@dimen/space_12"
            android:layout_marginRight="20dp"
            android:text="@string/lxregister"
            />
        <TextView
            android:id="@+id/lx_forgetpwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/lx_register"
            android:textColor="@color/xs_short_gary2"
            android:textSize="@dimen/space_12"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="10dp"
            android:text="@string/lxforgetpass"
            />


    </LinearLayout>
<!--快速登录-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/space_20"
        android:layout_marginLeft="@dimen/space_20"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">
        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="2"
            android:layout_gravity="center"
            android:background="@color/xs_short_gary"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/ksdj"
            android:textSize="@dimen/space_10"
            android:textColor="@color/xs_short_gary2"/>
        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="2"
            android:layout_gravity="center"
            android:background="@color/xs_short_gary"/>


    </LinearLayout>
<!--快速登录入口-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="horizontal">
    <Button
        android:id="@+id/fastlogin_qq"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/qqlogin"/>
        <Button
            android:id="@+id/fastlogin_wx"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:background="@drawable/weixinlogin"/>
        <Button
            android:id="@+id/fastlogin_sina"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginLeft="40dp"
            android:background="@drawable/sinalogin"/>


    </LinearLayout>


</LinearLayout>