<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.yuzhi.fine.activity.coreActivity.WTXRActivity">
    <!--标题栏-->
    <include layout="@layout/layout_main_header" />

        <!--选项-->
    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/checked_horlist_layout"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:gravity="center"
            android:orientation="horizontal"/>
    </HorizontalScrollView>
    <!--分割线-->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line" />
    <LinearLayout
        android:id="@+id/find_third_btn"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:orientation="horizontal">

        <Button
            android:id="@+id/find_top_btn"
            android:layout_width="50dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:layout_marginLeft="6dp"
            android:background="@drawable/zuixin"
            android:text="@string/main_lx_top_btn"
            android:textColor="@color/xs_short_black"
            android:textSize="@dimen/text_size_10" />

        <Button
            android:id="@+id/find_new_btn"
            android:layout_width="50dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:layout_marginLeft="6dp"
            android:background="@drawable/zuixin"
            android:text="@string/main_lx_new_btn"
            android:textColor="@color/xs_short_black"
            android:textSize="@dimen/text_size_10" />

        <Button
            android:id="@+id/find_xs_btn"
            android:layout_width="50dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:layout_marginLeft="6dp"
            android:background="@drawable/zuixin"
            android:text="@string/main_lx_xs_btn"
            android:textColor="@color/xs_short_black"
            android:textSize="@dimen/text_size_10" />
    </LinearLayout>
    <!--分割线-->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line" />



    <!--355dp     android:fastScrollEnabled = "true"-->
    <ListView
        android:id="@+id/lx_find_find_listview"
        android:scrollbars="none"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />


</LinearLayout>
