<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layoutFooter"
    android:layout_gravity="bottom"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:background="@color/main_footer_bg">
    <!--android:background="@color/main_footer_bg" 50dp-->

    <!--<LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/group"
        android:layout_marginBottom="10dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"

        android:orientation="vertical"
        >

        <ImageView
            android:id="@+id/foot_bar_issue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:scaleType="fitCenter"
            android:src="@drawable/lx_bottom_issue" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="发布"
            android:textColor="#28C700"/>
    </LinearLayout>-->

    <View
        android:id="@+id/viewSplit"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#EDEDED" />

    <RadioGroup
        android:id="@+id/group"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/foot_bar_home"
            style="@style/main_footer_bar_radio"
            android:checked="true"
            android:drawableTop="@drawable/widget_bar_home_bg"
            android:text="@string/main_navigation_home" />

        <RadioButton
            android:id="@+id/foot_bar_find"
            style="@style/main_footer_bar_radio"
            android:drawableTop="@drawable/widget_bar_im_bg"
            android:text="@string/main_navigation_im" />
        <!--<RadioButton
            style="@style/main_footer_bar_radio"
            android:drawableTop="@drawable/widget_bar_im_bg"
            android:visibility="invisible"
            android:text="@string/main_navigation_im" />-->
        <TextView
            style="@style/main_footer_bar_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#28C700"
            android:text="发布"
            />
        <RadioButton
            android:id="@+id/foot_bar_message"
            style="@style/main_footer_bar_radio"
            android:drawableTop="@drawable/widget_bar_interest_bg"
            android:text="@string/main_navigation_interest" />

        <RadioButton
            android:id="@+id/foot_bar_mine"
            style="@style/main_footer_bar_radio"
            android:drawableTop="@drawable/widget_bar_user_bg"
            android:text="@string/main_navigation_user" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@null"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null">

            <View
                android:id="@+id/viewSplitLine"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:background="@null" />

            <TextView
                android:id="@+id/textUnreadLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="2dp"
                android:layout_toEndOf="@+id/viewSplitLine"
                android:layout_toRightOf="@+id/viewSplitLine"
                android:background="@drawable/ic_bg_unread_count"
                android:gravity="center"
                android:text="2"
                android:textColor="#ffffff"
                android:textSize="@dimen/text_size_13" />
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>